crates/flir-core/src/lints/lengths/snapshots/flir_core__lints__lengths__tests__fix_output.snap
---
source: crates/flir-core/src/lints/lengths/mod.rs
expression: "get_fixed_text(vec![\"sapply(x, length)\", \"sapply(x, FUN = length)\",\n\"vapply(mtcars, length, integer(1))\",], \"lengths\", None)"
---
OLD:
====
sapply(x, length)
NEW:
====
lengths(x)

OLD:
====
sapply(x, FUN = length)
NEW:
====
lengths(x)

OLD:
====
vapply(mtcars, length, integer(1))
NEW:
====
lengths(mtcars)
