crates/flir-core/src/lints/lengths/snapshots/flir_core__lints__lengths__tests__no_fix_with_comments.snap
---
source: crates/flir-core/src/lints/lengths/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nsapply(x, length)\",\n\"sapply(\\n  # comment\\n  x, length\\n)\",\n\"sapply(x,\\n    # comment\\n    length)\",\n\"sapply(x, length) # trailing comment\",], \"lengths\", None)"
---
OLD:
====
# leading comment
sapply(x, length)
NEW:
====
# leading comment
lengths(x)

OLD:
====
sapply(
  # comment
  x, length
)
NEW:
====
sapply(
  # comment
  x, length
)

OLD:
====
sapply(x,
    # comment
    length)
NEW:
====
sapply(x,
    # comment
    length)

OLD:
====
sapply(x, length) # trailing comment
NEW:
====
lengths(x) # trailing comment
